src/Imp/parser/ImpParser.py
# $ANTLR 3.4.1-SNAPSHOT Imp.g 2013-07-03 15:48:44

import sys
from Imp.antlr3 import *

from Imp.antlr3.tree import *




# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
EOF=-1
T__50=50
T__51=51
T__52=52
T__53=53
T__54=54
T__55=55
T__56=56
T__57=57
T__58=58
T__59=59
T__60=60
T__61=61
T__62=62
T__63=63
T__64=64
T__65=65
T__66=66
T__67=67
T__68=68
T__69=69
T__70=70
T__71=71
T__72=72
T__73=73
T__74=74
T__75=75
T__76=76
T__77=77
T__78=78
T__79=79
T__80=80
T__81=81
T__82=82
T__83=83
T__84=84
T__85=85
T__86=86
T__87=87
T__88=88
T__89=89
T__90=90
T__91=91
ANON=4
ASSIGN=5
ATTR=6
CALL=7
CLASS_ID=8
CLASS_REF=9
COMMENT=10
CONSTRUCT=11
DEF_DEFAULT=12
DEF_ENTITY=13
DEF_IMPLEMENT=14
DEF_IMPLEMENTATION=15
DEF_RELATION=16
DEF_TYPE=17
ENUM=18
ENUM_KEY=19
ESC_SEQ=20
EXPONENT=21
EXPRESSION=22
FALSE=23
FLOAT=24
FOR=25
HASH=26
HEX_DIGIT=27
ID=28
INCLUDE=29
INDEX=30
INT=31
LAMBDA=32
LIST=33
METHOD=34
ML_STRING=35
MULT=36
NONE=37
NS=38
OCTAL_ESC=39
OP=40
ORPHAN=41
REF=42
REGEX=43
STATEMENT=44
STRING=45
TRUE=46
UNICODE_ESC=47
VAR_REF=48
WS=49

# token names
tokenNamesMap = {
    0: "<invalid>", 1: "<EOR>", 2: "<DOWN>", 3: "<UP>",
    -1: "EOF", 50: "T__50", 51: "T__51", 52: "T__52", 53: "T__53", 54: "T__54", 
    55: "T__55", 56: "T__56", 57: "T__57", 58: "T__58", 59: "T__59", 60: "T__60", 
    61: "T__61", 62: "T__62", 63: "T__63", 64: "T__64", 65: "T__65", 66: "T__66", 
    67: "T__67", 68: "T__68", 69: "T__69", 70: "T__70", 71: "T__71", 72: "T__72", 
    73: "T__73", 74: "T__74", 75: "T__75", 76: "T__76", 77: "T__77", 78: "T__78", 
    79: "T__79", 80: "T__80", 81: "T__81", 82: "T__82", 83: "T__83", 84: "T__84", 
    85: "T__85", 86: "T__86", 87: "T__87", 88: "T__88", 89: "T__89", 90: "T__90", 
    91: "T__91", 4: "ANON", 5: "ASSIGN", 6: "ATTR", 7: "CALL", 8: "CLASS_ID", 
    9: "CLASS_REF", 10: "COMMENT", 11: "CONSTRUCT", 12: "DEF_DEFAULT", 13: "DEF_ENTITY", 
    14: "DEF_IMPLEMENT", 15: "DEF_IMPLEMENTATION", 16: "DEF_RELATION", 17: "DEF_TYPE", 
    18: "ENUM", 19: "ENUM_KEY", 20: "ESC_SEQ", 21: "EXPONENT", 22: "EXPRESSION", 
    23: "FALSE", 24: "FLOAT", 25: "FOR", 26: "HASH", 27: "HEX_DIGIT", 28: "ID", 
    29: "INCLUDE", 30: "INDEX", 31: "INT", 32: "LAMBDA", 33: "LIST", 34: "METHOD", 
    35: "ML_STRING", 36: "MULT", 37: "NONE", 38: "NS", 39: "OCTAL_ESC", 
    40: "OP", 41: "ORPHAN", 42: "REF", 43: "REGEX", 44: "STATEMENT", 45: "STRING", 
    46: "TRUE", 47: "UNICODE_ESC", 48: "VAR_REF", 49: "WS"
}
Token.registerTokenNamesMap(tokenNamesMap)

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>",
    "ANON", "ASSIGN", "ATTR", "CALL", "CLASS_ID", "CLASS_REF", "COMMENT", 
    "CONSTRUCT", "DEF_DEFAULT", "DEF_ENTITY", "DEF_IMPLEMENT", "DEF_IMPLEMENTATION", 
    "DEF_RELATION", "DEF_TYPE", "ENUM", "ENUM_KEY", "ESC_SEQ", "EXPONENT", 
    "EXPRESSION", "FALSE", "FLOAT", "FOR", "HASH", "HEX_DIGIT", "ID", "INCLUDE", 
    "INDEX", "INT", "LAMBDA", "LIST", "METHOD", "ML_STRING", "MULT", "NONE", 
    "NS", "OCTAL_ESC", "OP", "ORPHAN", "REF", "REGEX", "STATEMENT", "STRING", 
    "TRUE", "UNICODE_ESC", "VAR_REF", "WS", "'!='", "'('", "')'", "','", 
    "'--'", "'->'", "'.'", "':'", "'::'", "'<'", "'<-'", "'<='", "'='", 
    "'=='", "'>'", "'>='", "'['", "']'", "'and'", "'as'", "'end'", "'entity'", 
    "'extends'", "'for'", "'implement'", "'implementation'", "'in'", "'include'", 
    "'index'", "'is'", "'matching'", "'not'", "'or'", "'parent'", "'root'", 
    "'typedef'", "'using'", "'when'", "'with'", "'{'", "'|'", "'}'"
]



class ImpParser(Parser):
    grammarFileName = "Imp.g"
    api_version = 1
    tokenNames = tokenNames

    def __init__(self, input, state=None, *args, **kwargs):
        if state is None:
            state = RecognizerSharedState()

        super().__init__(input, state, *args, **kwargs)

        self.dfa1 = self.DFA1(
            self, 1,
            eot = self.DFA1_eot,
            eof = self.DFA1_eof,
            min = self.DFA1_min,
            max = self.DFA1_max,
            accept = self.DFA1_accept,
            special = self.DFA1_special,
            transition = self.DFA1_transition
            )

        self.dfa4 = self.DFA4(
            self, 4,
            eot = self.DFA4_eot,
            eof = self.DFA4_eof,
            min = self.DFA4_min,
            max = self.DFA4_max,
            accept = self.DFA4_accept,
            special = self.DFA4_special,
            transition = self.DFA4_transition
            )

        self.dfa6 = self.DFA6(
            self, 6,
            eot = self.DFA6_eot,
            eof = self.DFA6_eof,
            min = self.DFA6_min,
            max = self.DFA6_max,
            accept = self.DFA6_accept,
            special = self.DFA6_special,
            transition = self.DFA6_transition
            )

        self.dfa5 = self.DFA5(
            self, 5,
            eot = self.DFA5_eot,
            eof = self.DFA5_eof,
            min = self.DFA5_min,
            max = self.DFA5_max,
            accept = self.DFA5_accept,
            special = self.DFA5_special,
            transition = self.DFA5_transition
            )

        self.dfa9 = self.DFA9(
            self, 9,
            eot = self.DFA9_eot,
            eof = self.DFA9_eof,
            min = self.DFA9_min,
            max = self.DFA9_max,
            accept = self.DFA9_accept,
            special = self.DFA9_special,
            transition = self.DFA9_transition
            )

        self.dfa20 = self.DFA20(
            self, 20,
            eot = self.DFA20_eot,
            eof = self.DFA20_eof,
            min = self.DFA20_min,
            max = self.DFA20_max,
            accept = self.DFA20_accept,
            special = self.DFA20_special,
            transition = self.DFA20_transition
            )

        self.dfa27 = self.DFA27(
            self, 27,
            eot = self.DFA27_eot,
            eof = self.DFA27_eof,
            min = self.DFA27_min,
            max = self.DFA27_max,
            accept = self.DFA27_accept,
            special = self.DFA27_special,
            transition = self.DFA27_transition
            )

        self.dfa38 = self.DFA38(
            self, 38,
            eot = self.DFA38_eot,
            eof = self.DFA38_eof,
            min = self.DFA38_min,
            max = self.DFA38_max,
            accept = self.DFA38_accept,
            special = self.DFA38_special,
            transition = self.DFA38_transition
            )

        self.dfa40 = self.DFA40(
            self, 40,
            eot = self.DFA40_eot,
            eof = self.DFA40_eof,
            min = self.DFA40_min,
            max = self.DFA40_max,
            accept = self.DFA40_accept,
            special = self.DFA40_special,
            transition = self.DFA40_transition
            )




        self.delegates = []

        self._adaptor = None
        self.adaptor = CommonTreeAdaptor()



    def getTreeAdaptor(self):
        return self._adaptor

    def setTreeAdaptor(self, adaptor):
        self._adaptor = adaptor

    adaptor = property(getTreeAdaptor, setTreeAdaptor)


    class main_return(ParserRuleReturnScope):
        def __init__(self):
            super().__init__()

            self.tree = None





    # $ANTLR start "main"
    # Imp.g:47:1: main : ( def_statement | top_statement | ML_STRING )* -> ^( LIST ( def_statement )* ( top_statement )* ( ML_STRING )* ) ;
    def main(self, ):
        retval = self.main_return()
        retval.start = self.input.LT(1)


        root_0 = None

        ML_STRING3 = None
        def_statement1 = None
        top_statement2 = None

        ML_STRING3_tree = None
        stream_ML_STRING = RewriteRuleTokenStream(self._adaptor, "token ML_STRING")
        stream_def_statement = RewriteRuleSubtreeStream(self._adaptor, "rule def_statement")
        stream_top_statement = RewriteRuleSubtreeStream(self._adaptor, "rule top_statement")
        try:
            try:
                # Imp.g:48:2: ( ( def_statement | top_statement | ML_STRING )* -> ^( LIST ( def_statement )* ( top_statement )* ( ML_STRING )* ) )
                # Imp.g:48:4: ( def_statement | top_statement | ML_STRING )*
                pass 
                # Imp.g:48:4: ( def_statement | top_statement | ML_STRING )*
                while True: #loop1
                    alt1 = 4
                    alt1 = self.dfa1.predict(self.input)
                    if alt1 == 1:
                        # Imp.g:48:5: def_statement
                        pass 
                        self._state.following.append(self.FOLLOW_def_statement_in_main172)
                        def_statement1 = self.def_statement()

                        self._state.following.pop()
                        if self._state.backtracking == 0:
                            stream_def_statement.add(def_statement1.tree)



                    elif alt1 == 2:
                        # Imp.g:48:21: top_statement
                        pass 
                        self._state.following.append(self.FOLLOW_top_statement_in_main176)
                        top_statement2 = self.top_statement()

                        self._state.following.pop()
                        if self._state.backtracking == 0:
                            stream_top_statement.add(top_statement2.tree)



                    elif alt1 == 3:
                        # Imp.g:48:37: ML_STRING
                        pass 
                        ML_STRING3 = self.match(self.input, ML_STRING, self.FOLLOW_ML_STRING_in_main180) 
                        if self._state.backtracking == 0:
                            stream_ML_STRING.add(ML_STRING3)



                    else:
                        break #loop1


                # AST Rewrite
                # elements: top_statement, ML_STRING, def_statement
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 
                if self._state.backtracking == 0:
                    retval.tree = root_0
                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 48:49: -> ^( LIST ( def_statement )* ( top_statement )* ( ML_STRING )* )
                    # Imp.g:48:52: ^( LIST ( def_statement )* ( top_statement )* ( ML_STRING )* )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(
                    self._adaptor.createFromType(LIST, "LIST")
                    , root_1)

                    # Imp.g:48:59: ( def_statement )*
                    while stream_def_statement.hasNext():
                        self._adaptor.addChild(root_1, stream_def_statement.nextTree())


                    stream_def_statement.reset();

                    # Imp.g:48:74: ( top_statement )*
                    while stream_top_statement.hasNext():
                        self._adaptor.addChild(root_1, stream_top_statement.nextTree())


                    stream_top_statement.reset();

                    # Imp.g:48:89: ( ML_STRING )*
                    while stream_ML_STRING.hasNext():
                        self._adaptor.addChild(root_1, 
                        stream_ML_STRING.nextNode()
                        )


                    stream_ML_STRING.reset();

                    self._adaptor.addChild(root_0, root_1)




                    retval.tree = root_0





                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



                       
            except RecognitionException as re:
            	raise re

        finally:
            pass
        return retval

    # $ANTLR end "main"


    class def_statement_return(ParserRuleReturnScope):
        def __init__(self):
            super().__init__()

            self.tree = None





    # $ANTLR start "def_statement"
    # Imp.g:51:1: def_statement : ( typedef | entity_def | implementation_def | relation | index | implement_def );
    def def_statement(self, ):
        retval = self.def_statement_return()
        retval.start = self.input.LT(1)


        root_0 = None

        typedef4 = None
        entity_def5 = None
        implementation_def6 = None
        relation7 = None
        index8 = None
        implement_def9 = None


        try:
            try:
                # Imp.g:52:2: ( typedef | entity_def | implementation_def | relation | index | implement_def )
                alt2 = 6
                LA2 = self.input.LA(1)
                if LA2 in {85}:
                    alt2 = 1
                elif LA2 in {71}:
                    alt2 = 2
                elif LA2 in {75}:
                    alt2 = 3
                elif LA2 in {CLASS_ID, ID}:
                    alt2 = 4
                elif LA2 in {78}:
                    alt2 = 5
                elif LA2 in {74}:
                    alt2 = 6
                else:
                    if self._state.backtracking > 0:
                        raise BacktrackingFailed


                    nvae = NoViableAltException("", 2, 0, self.input)

                    raise nvae


                if alt2 == 1:
                    # Imp.g:52:4: typedef
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_typedef_in_def_statement208)
                    typedef4 = self.typedef()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, typedef4.tree)



                elif alt2 == 2:
                    # Imp.g:52:14: entity_def
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_entity_def_in_def_statement212)
                    entity_def5 = self.entity_def()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, entity_def5.tree)



                elif alt2 == 3:
                    # Imp.g:52:27: implementation_def
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_implementation_def_in_def_statement216)
                    implementation_def6 = self.implementation_def()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, implementation_def6.tree)



                elif alt2 == 4:
                    # Imp.g:52:48: relation
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_relation_in_def_statement220)
                    relation7 = self.relation()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, relation7.tree)



                elif alt2 == 5:
                    # Imp.g:52:59: index
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_index_in_def_statement224)
                    index8 = self.index()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, index8.tree)



                elif alt2 == 6:
                    # Imp.g:52:67: implement_def
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_implement_def_in_def_statement228)
                    implement_def9 = self.implement_def()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, implement_def9.tree)



                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



                       
            except RecognitionException as re:
            	raise re

        finally:
            pass
        return retval

    # $ANTLR end "def_statement"


    class index_return(ParserRuleReturnScope):
        def __init__(self):
            super().__init__()

            self.tree = None





    # $ANTLR start "index"
    # Imp.g:55:1: index : 'index' class_ref '(' ID ( ',' ID )* ')' -> ^( INDEX class_ref ^( LIST ( ID )+ ) ) ;
    def index(self, ):
        retval = self.index_return()
        retval.start = self.input.LT(1)


        root_0 = None

        string_literal10 = None
        char_literal12 = None
        ID13 = None
        char_literal14 = None
        ID15 = None
        char_literal16 = None
        class_ref11 = None

        string_literal10_tree = None
        char_literal12_tree = None
        ID13_tree = None
        char_literal14_tree = None
        ID15_tree = None
        char_literal16_tree = None
        stream_78 = RewriteRuleTokenStream(self._adaptor, "token 78")
        stream_ID = RewriteRuleTokenStream(self._adaptor, "token ID")
        stream_51 = RewriteRuleTokenStream(self._adaptor, "token 51")
        stream_52 = RewriteRuleTokenStream(self._adaptor, "token 52")
        stream_53 = RewriteRuleTokenStream(self._adaptor, "token 53")
        stream_class_ref = RewriteRuleSubtreeStream(self._adaptor, "rule class_ref")
        try:
            try:
                # Imp.g:56:2: ( 'index' class_ref '(' ID ( ',' ID )* ')' -> ^( INDEX class_ref ^( LIST ( ID )+ ) ) )
                # Imp.g:56:4: 'index' class_ref '(' ID ( ',' ID )* ')'
                pass 
                string_literal10 = self.match(self.input, 78, self.FOLLOW_78_in_index240) 
                if self._state.backtracking == 0:
                    stream_78.add(string_literal10)


                self._state.following.append(self.FOLLOW_class_ref_in_index242)
                class_ref11 = self.class_ref()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    stream_class_ref.add(class_ref11.tree)


                char_literal12 = self.match(self.input, 51, self.FOLLOW_51_in_index244) 
                if self._state.backtracking == 0:
                    stream_51.add(char_literal12)


                ID13 = self.match(self.input, ID, self.FOLLOW_ID_in_index246) 
                if self._state.backtracking == 0:
                    stream_ID.add(ID13)


                # Imp.g:56:29: ( ',' ID )*
                while True: #loop3
                    alt3 = 2
                    LA3_0 = self.input.LA(1)

                    if (LA3_0 == 53) :
                        alt3 = 1


                    if alt3 == 1:
                        # Imp.g:56:30: ',' ID
                        pass 
                        char_literal14 = self.match(self.input, 53, self.FOLLOW_53_in_index249) 
                        if self._state.backtracking == 0:
                            stream_53.add(char_literal14)


                        ID15 = self.match(self.input, ID, self.FOLLOW_ID_in_index251) 
                        if self._state.backtracking == 0:
                            stream_ID.add(ID15)



                    else:
                        break #loop3


                char_literal16 = self.match(self.input, 52, self.FOLLOW_52_in_index255) 
                if self._state.backtracking == 0:
                    stream_52.add(char_literal16)


                # AST Rewrite
                # elements: ID, class_ref
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 
                if self._state.backtracking == 0:
                    retval.tree = root_0
                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 56:43: -> ^( INDEX class_ref ^( LIST ( ID )+ ) )
                    # Imp.g:56:46: ^( INDEX class_ref ^( LIST ( ID )+ ) )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(
                    self._adaptor.createFromType(INDEX, "INDEX")
                    , root_1)

                    self._adaptor.addChild(root_1, stream_class_ref.nextTree())

                    # Imp.g:56:64: ^( LIST ( ID )+ )
                    root_2 = self._adaptor.nil()
                    root_2 = self._adaptor.becomeRoot(
                    self._adaptor.createFromType(LIST, "LIST")
                    , root_2)

                    # Imp.g:56:71: ( ID )+
                    if not (stream_ID.hasNext()):
                        raise RewriteEarlyExitException()

                    while stream_ID.hasNext():
                        self._adaptor.addChild(root_2, 
                        stream_ID.nextNode()
                        )


                    stream_ID.reset()

                    self._adaptor.addChild(root_1, root_2)

                    self._adaptor.addChild(root_0, root_1)




                    retval.tree = root_0





                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



                       
            except RecognitionException as re:
            	raise re

        finally:
            pass
        return retval

    # $ANTLR end "index"


    class rhs_return(ParserRuleReturnScope):
        def __init__(self):
            super().__init__()

            self.tree = None





    # $ANTLR start "rhs"
    # Imp.g:59:1: rhs : ( ( class_ref '(' )=> anon_ctor | operand );
    def rhs(self, ):
        retval = self.rhs_return()
        retval.start = self.input.LT(1)


        root_0 = None

        anon_ctor17 = None
        operand18 = None


        try:
            try:
                # Imp.g:60:2: ( ( class_ref '(' )=> anon_ctor | operand )
                alt4 = 2
                alt4 = self.dfa4.predict(self.input)
                if alt4 == 1:
                    # Imp.g:60:4: ( class_ref '(' )=> anon_ctor
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_anon_ctor_in_rhs291)
                    anon_ctor17 = self.anon_ctor()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, anon_ctor17.tree)



                elif alt4 == 2:
                    # Imp.g:61:4: operand
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_operand_in_rhs296)
                    operand18 = self.operand()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, operand18.tree)



                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



                       
            except RecognitionException as re:
            	raise re

        finally:
            pass
        return retval

    # $ANTLR end "rhs"


    class top_statement_return(ParserRuleReturnScope):
        def __init__(self):
            super().__init__()

            self.tree = None





    # $ANTLR start "top_statement"
    # Imp.g:64:1: top_statement : ( 'include' ns_ref -> ^( INCLUDE ns_ref ) | ( 'for' )=> 'for' ID 'in' ( variable | class_ref ) implementation -> ^( FOR ID ( variable )? ( class_ref )? implementation ) | variable '=' rhs -> ^( ASSIGN variable rhs ) | ( class_ref '(' )=> anon_ctor -> ^( ORPHAN anon_ctor ) | function_call | method_call | enum_stmt );
    def top_statement(self, ):
        retval = self.top_statement_return()
        retval.start = self.input.LT(1)


        root_0 = None

        string_literal19 = None
        string_literal21 = None
        ID22 = None
        string_literal23 = None
        char_literal28 = None
        ns_ref20 = None
        variable24 = None
        class_ref25 = None
        implementation26 = None
        variable27 = None
        rhs29 = None
        anon_ctor30 = None
        function_call31 = None
        method_call32 = None
        enum_stmt33 = None
